--- a/style.css
+++ b/style.css
@@ -93,17 +93,16 @@ body{
 }
 .navbar a:hover {
   background-color: #0089FF;
-  border-radius: 20px;
   transition: .6s ease;
-  
+  border-radius: 20px;
 }
 .navbar-nav > li{
 	margin-left:30px;
 	margin-right:30px;
 }
 .navbar li {
-	border:1px solid #fff;
 	border-radius: 25px;
+	border: 1px solid;
 }
 .nav-item  {
 	font-size: 25px;
@@ -205,9 +204,4 @@ body{
 }
 .card2 img:hover {
 	background-color: rgba(0,0,0,0.5);
-}
-@media screen and (max-width: 500px) {
-  .col {
-    width: 100%;
-  }
 }
