--- a/style.css
+++ b/style.css
@@ -1,24 +1,20 @@
 
-.title {
-	position:absolute;
-	top: 50%;
-	left:500%;
-	transform: translate(-50%,-50%);
-	font-family: 'Kanit', sans-serif;
-
+.class1 {
+	text-align: left;
+	margin-left: 50px;
+	position: relative;
+	top: 15rem;
 }
-.title h1{
-	text-align: center;
+.class1 h1{
 	font-size: 60px;
 	color: #fff;
 	font-family: 'Kanit', sans-serif;
 }
-.title p{
+.class1 p{
 	font-size: 16px;
 	font-family: 'Kanit', sans-serif;
 	color: #0089FF;
 	margin-left: 20px;
-	
 }
 img {
 	height: 400px;
@@ -31,47 +27,30 @@ body{
 	/*linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)) */
 	/*https://c4.wallpaperflare.com/wallpaper/803/485/82/cebu-moalboal-philippines-sunset-dusk-clouds-sea-boats-wallpaper-preview.jpg*/
 }
-
+.about-bg {
+	background-image:url(beach.jpg);
+	background-size: cover;
+	background-attachment: fixed;
+	background-repeat: no-repeat;
+}
 /*---------------------------------------------------------ABOUT----------------------------------*/
-.container {
-	text-align: center;
+.container2 .card{
+    padding: 1.5em .5em .5em;
+    border-radius: 2em;
+    text-align: center;
+    box-shadow: 0 5px 10px rgba(0,0,0,.2);
+    top: 1rem;
 }
-.ab h1{ 
-	font-size:50px;
-	padding-top: 60px;
-	margin: auto;
-	line-height: 50px;
-	color: #fff;
+.container2 .card img {
+	width: 75%;
+    border-radius: 50%;
+    margin: 0 auto;
+    box-shadow: 0 0 10px rgba(0,0,0,.2);
+    text-align: center;
 }
-.team img {
-	height: 200px;
-	
-}
-.team {
-	margin: 10px;
-	padding: 10px;
-	max-width: 30%;
-	cursor: pointer;
-	box-sizing: border-box;
-	background-color: #fff;
-	border-radius: 10px
-
-}
-.sub-container{
-	max-width: 1200px;
-	margin: auto;
-	padding: 20px 0;
-	display: flex;
-}	
-.name {
-	padding: 12px;
-	font-weight: bold;
-	font-size: 16px;
-	text-transform: uppercase; 
-}
-.about {
-	margin: 20px 0;
-	font-weight: lighter;
+.container2 h5 {
+	font-weight: 700;
+    font-size: 1.5em;
 }
 .social-links {
 	margin: 14px;
@@ -94,43 +73,23 @@ body{
 .navbar a:hover {
   background-color: #0089FF;
   transition: .6s ease;
-  border-radius: 20px;
 }
 .navbar-nav > li{
-	margin-left:30px;
-	margin-right:30px;
-}
-.navbar li {
-	border-radius: 25px;
-	border: 1px solid;
+  padding-left:30px;
+  padding-right:30px;
+  color: black;
 }
 .nav-item  {
 	font-size: 25px;
 }
 /*--------------------------------------DESTINATION-----------------------------------------------------*/
-.class1 {
-	position:absolute;
-	top: 50%;
-	left:25%;
-	transform: translate(-50%,-50%);
-}
-.class1 h1{
-	font-size: 60px;
-	color: #fff;
-	font-family: 'Kanit', sans-serif;
-}
-.class1 p{
-	font-size: 16px;
-	font-family: 'Kanit', sans-serif;
-	color: #0089FF;
-	margin-left: 20px;
-}
+
 .class2 img{
 	height: 270px;
 	border-radius: 10px;
 	margin-left: 55px;
 	margin-top: 210px;
-	width: 300px;
+	width: 440px;
 }
 .class2 h1{
 	top:150px;
@@ -156,18 +115,24 @@ body{
 /*--------------------------------------Carousel index---------------------------------------------------------------*/
 .carousel{
 	width:280px; 
-	position: absolute;
-	top: 15rem;
-	left: 30rem;
+	position: relative;
+	top: 1rem;
+	left: 70rem;
 }
 .carousel img{
 	border-radius: 15px;
+	box-shadow: 0 0 10px rgba(0,0,0,.2);
+
 }
-/*----------------------------------------molbol html-------------------------------------------------------------------*/
+.carousel-caption h5 {
+	font-size: 23px;
+	text-align: center;
+}
+/*----------------------------------------Cards-------------------------------------------------------------------*/
 
 .card {
 	position: absolute;
-	top: 20px;
+	top: 100px;
 	left: 5px;
 	margin-left: 160px;
 }
@@ -199,13 +164,40 @@ body{
 	width: 15rem;
 	height: 15rem;
 	border-radius: 15px;
-	cursor: pointer;
-	transition: .5s ease;
 }
 .card2 img:hover {
 	background-color: rgba(0,0,0,0.5);
 }
-.col {
-	position: relative;
-	top: 10px;
+@media screen and (max-width: 500px) {
+  .col {
+    width: 100%;
+  }
+}
+/*---------------------------------------------------RATING STARS--------------------*/
+.stars i{
+	font-size: 21px;
+}
+.checked {
+	color: orange;
+}
+.stars2 {
+	display: block;
+	position: absolute;
+	left: 20rem;
+	top: 35px;
+}
+.stars2 i{
+	font-size: 25px;
+}
+
+.descards .card {
+	width: 18rem;
+	border-radius: 0px;
+}
+.descards .card h5{
+	font-size: 25px;
+	color: #fff;
+}
+.descards .card img{
+	height: 300px;
 }
