--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
 .class1 p{
 	font-size: 16px;
 	font-family: 'Kanit', sans-serif;
-	color: #0089FF;
+	color: OrangeRed;
 	margin-left: 20px;
 }
 img {
